# HAR

./: .gitignore  CMakeLists.txt  install_dependencies.bat
res/: shell.html
src/: HAR.cpp  aimanager.cpp  aimanager.hpp  app.cpp  app.hpp  components.hpp  constants.hpp  effectsmanager.h  gamemanager.cpp  gamemanager.hpp  inputmanager.cpp  inputmanager.hpp  manager.hpp  movementmanager.cpp  movementmanager.hpp  overlapmanager.cpp  overlapmanager.hpp  physicsmanager.cpp  physicsmanager.hpp  rendermanager.cpp  rendermanager.hpp  shaders.hpp  utils.cpp  utils.hpp  vector2.hpp  worldmanager.cpp  worldmanager.hpp
src/components/: common.hpp  gameplay.hpp  geometry.hpp  render.hpp
src/effects/: barriercollisioneffect.cpp  barriercollisioneffect.hpp  effect.hpp
